server/src/main/java/com/example/cardealership/web/error/BusinessValidationException.java
package com.example.cardealership.web.error;

public class BusinessValidationException extends RuntimeException {
    public BusinessValidationException(String message) {
        super(message);
    }
}